fix(back-button): align button to the left

--- a/src/assets/layout.css
+++ b/src/assets/layout.css
@@ -18,7 +18,3 @@
         width: 600px;
     }
 }
-
-.site-content__back-button {
-    margin-top: var(--spacing-double);
-}
